# github-api-agent

./: .gitignore  README.md  github-api-agent.cabal  github-api-agents.cabal  package.yaml
app/: Main.hs
docs/: GitHub-Request-Agent-Internal.html  GitHub-Request-Agent.html  doc-index.html  github-api-agent.haddock  github-api-agent.txt  index.html  mini_GitHub-Request-Agent-Internal.html  mini_GitHub-Request-Agent.html
docs/src/: GitHub.Request.Agent.Internal.html  GitHub.Request.Agent.html  Paths_github_api_agent.html
src/GitHub/Request/: Agent.hs
src/GitHub/Request/Agent/: Internal.hs
