name:                github-api-agent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matonix/github-api-agent#readme
license:             BSD3
license-file:        LICENSE
author:              maton
maintainer:          automatonix@gmail.com
copyright:           2017 maton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitHub.Request.Agent
                     , GitHub.Request.Agent.Internal
  build-depends:       base >= 4.7 && < 5
                     , github
                     , http-client
                     , unordered-containers
                     , time
                     , bytestring
                     , case-insensitive
  default-language:    Haskell2010

executable github-api-agent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , github-api-agent
                     , github
                     , bytestring
  default-language:    Haskell2010

test-suite github-api-agent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , github-api-agent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matonix/github-api-agent
